# bb8

./: .gitignore  .gitmodules  README  README.md  frames_2025-03-04_18.34.53.gv  frames_2025-03-09_18.20.04.gv  frames_2025-03-31_17.35.58.gv  frames_2025-04-01_12.00.34.gv  frames_2025-04-01_12.06.54.gv  frames_2025-04-01_13.13.50.gv  frames_2025-04-02_09.20.01.gv  frames_2025-04-06_17.24.44.gv  frames_2025-04-06_19.23.54.gv  robot.txt  robot.urdf
motor/: 166930_GP32C-1st.prt  272762_ec-max30_60w.prt  272762_ec-max30_60w.stp  motor_assembly.prt
simplified/: assembly1.prt  ball_joint_hub.prt  ball_joint_rod.prt  counterweight.prt  frame.prt  frame_assembly.prt  head.prt  layout1.prt  motor.prt  roller.prt  sphere.prt  supports.prt  wheel.prt
simplified/meshes/: ball_joint_hub.stl  frame.stl  head.stl  sphere.stl  supports.stl  wheel.stl
src/: ekf_params.yaml  my_map.pgm  my_map.yaml  nav2_params.yaml  slam_params.yaml
src/bb8_bringup/: package.xml  setup.cfg  setup.py
src/bb8_bringup/launch/: bb8_sim.launch.xml  follower.launch.py  mapping.launch.py  navigation.launch.py  sim.launch.py  slam.launch.py  test.launch.py
src/bb8_bringup/rviz/: rviz.rviz
src/bb8_controllers/: package.xml  setup.cfg  setup.py
src/bb8_description/: package.xml  setup.cfg  setup.py
src/bb8_navigation/: package.xml  setup.py
src/hardware/jy901s_imu_ros2/: CMakeLists.txt  package.xml
src/hardware/jy901s_imu_ros2/src/: jy901s_imu_node.cpp  main.cpp  serial.cpp  serial.hpp  wit_c_sdk.cpp  wit_c_sdk.hpp
src/psx_ros/: package.xml  setup.cfg  setup.py
(+47 files in other folders)
